# healthbridge-data-pipeline

./: .gitignore  README.md  config.py  main.py  pipeline.py  pyproject.toml
catalog/: catalog.py
checks/: checks.py
elt/: extract.py  load.py  transform.py
