[project]
name = "healthbridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awswrangler>=3.16.0",
    "boto3>=1.43.1",
    "pandas>=3.0.2",
    "psycopg2>=2.9.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
]
